# models

./: BUILD.md  IL09_Project_Summary_v6.docx  IMPROVEMENTS.md  pollster_db.json  requirements.txt
.claude/: settings.local.json
26_turnout/primary/: group_daily_vote_pct.csv  group_daily_vote_raw.csv  total.xls  ward_daily_totals.csv  ward_groups.csv  ward_prog_turnout.csv  ward_turnout_analysis.csv
Shapefiles/: CTA_L.geojson  CTA_RailStations.geojson  chicago_wards.geojson
analysis/chicago_mayor_2027/: build_precinct_map.py  build_progressive_scores.py  build_turnout_stats.py  load_scores_to_db.py  map_score_variants.py  map_turnout_stats.py  run_poll_snapshot.py
analysis/chicago_mayor_2027/outputs/: chicago_mayor_2027_precinct_map.html  chicago_mayor_2027_precinct_map_blocs.html  chicago_mayor_2027_precinct_map_deadheat.html  (+2 more)
analysis/il09_2026/: calibration_params.json  postmortem.py  precinct_errors.csv  rerun_test.py  three_map_comparison.py
core/: chicago_early_votes.py  db.py  poll_weighting.py  pollster_ratings.py  precinct_calibration.py  precinct_pipeline.py  precinct_score_db.py  race_config.py  regional_forecast.py  simulator_runner.py
core/election_night/: election_logger.py  ward_inference.py
pollster_calibration/: pollster_calibration.py
races/chicago_mayor_2023/: compare_results.py  crosstab_coverage.py  map_precincts.py  map_wards.py  polls_round1.json  race_config.py  rolling_forecast.py  run.py
races/chicago_mayor_2027/: race_config.py  run.py
races/il09_2026/: race_config.py  run.py
simulator/: Cargo.toml
simulator/src/: main.rs
(+113 files in other folders)
